add compressed data test

--- a/WebContent/welcome.html
+++ b/WebContent/welcome.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 welcome to my platform!
+<br/>
+<a href="compressed">get compressed data</a>
+<br/>
+<a href="compressed?disableGzip=true">get uncompressed data</a>
 </body>
 </html>
