1.生成excel实例 2.登录验证码功能

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -10,6 +10,9 @@ username:<input type="text" name="uname"/>
 <br/>
 password:<input type="password" name="passwd"/>
 <br/>
+authcode:<img src="authcode"/>
+<input type="text" name="authcode" style="width:80px;height:20px;"/>
+<br/>
 <input type="submit"/>
 </form>
 </body>
