增加游戏对象及事件处理机制

--- a/WebContent/game.html
+++ b/WebContent/game.html
@@ -3,42 +3,44 @@
 <head>
 <meta charset="UTF-8">
 <title>Three Kingdoms</title>
+<script type="text/javascript" src="ben.js"></script>
 <script>
-	function draw(){
+	function imgClick(event){
+		alert("aaa");
+	}
+	function imgDown(event){
+		ctx.clearRect(0, 0, 500, 500);
+		var gameImg = event.currentTarget;
+		gameImg.scaleX = gameImg.scaleY = 2;
+		gameImg.render();
+	}
+	function imgUp(event){
+		ctx.clearRect(0, 0, 500, 500);
+		var gameImg = event.currentTarget;
+		gameImg.scaleX = gameImg.scaleY = 1;
+		gameImg.render();
+	}
+	function draw() {
 		var canvas = document.getElementById("canvas");
-		if(canvas.getContext){
-			var ctx = canvas.getContext("2d");
-			
-			ctx.fillStyle = "rgb(200,0,0)";
-			ctx.fillRect(10, 10, 55, 50);
-			
-			ctx.fillStyle = "rgba(0, 0, 200, 0.5)";
-			ctx.fillRect(30, 30, 55, 50);
-			
-			ctx.fillRect(90, 90, 60, 60);
-			ctx.clearRect(100, 100, 40, 40);
-			ctx.strokeRect(110, 110, 20, 20);
-			
-			ctx.beginPath();
-			ctx.arc(10, 80, 20, 0, Math.PI/2, true);
-			ctx.fill();
-			ctx.closePath();
-			
-			ctx.beginPath();
-		    ctx.moveTo(75,25);
-		    ctx.quadraticCurveTo(25,25,25,62.5);
-		    ctx.quadraticCurveTo(25,100,50,100);
-		    ctx.quadraticCurveTo(50,120,30,125);
-		    ctx.quadraticCurveTo(60,120,65,100);
-		    ctx.quadraticCurveTo(125,100,125,62.5);
-		    ctx.quadraticCurveTo(125,25,75,25);
-		    ctx.stroke();
+		init(canvas);
+		if (canvas.getContext) {
+			var img1 = new GameImage("img/monster1.png");
+			img1.x = 100;
+			img1.y = 200;
+			img1.width = 128;
+			img1.height = 128;
+			img1.hAlign = "center";
+			img1.vAlign = "center";
+			img1.addEventListener("mousedown", imgDown);
+			img1.addEventListener("mouseup", imgUp);
+			//img1.addEventListener("click", imgDown);
+			img1.load();
 		}
 	}
 </script>
 </head>
 <body onload="draw();">
-	<canvas id="canvas" width="150" height="150">
+	<canvas id="canvas" width="500" height="500">
 	当前浏览器不支持html5 canvas!
 	</canvas>
 </body>
